[gd_scene load_steps=6 format=3 uid="uid://hsqhejj81yue"]

[ext_resource type="Script" path="res://UI/main_menu_screen.gd" id="1_1p7x8"]
[ext_resource type="Texture2D" uid="uid://do7vf8rq8d7c5" path="res://assets/warped-files/PNG/environment/environment-preview.png" id="1_f044p"]
[ext_resource type="Theme" uid="uid://ct2py4p54rh12" path="res://UI/Theme/game_theme.tres" id="2_7mc4c"]
[ext_resource type="Texture2D" uid="uid://crnt2i5a1jwv8" path="res://PLAYER/PLAYERSPRITE/player-run-4.png" id="3_cxppf"]
[ext_resource type="Texture2D" uid="uid://ylw6r37bwbee" path="res://assets/warped-files/PNG/sprites/enemies/octopus/octopus-1.png" id="4_gvidr"]

[node name="MainMenuScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_1p7x8")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -340.0
offset_top = -69.0
offset_right = 236.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_f044p")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 482.0
offset_bottom = 268.0
theme = ExtResource("2_7mc4c")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY
"

[node name="SettingsButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="ExitButton2" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="Player-run-4" type="Sprite2D" parent="."]
position = Vector2(174, 229)
texture = ExtResource("3_cxppf")

[node name="Octopus-1" type="Sprite2D" parent="."]
position = Vector2(403, 191)
texture = ExtResource("4_gvidr")

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton2" to="." method="_on_exit_button_2_pressed"]
